--- a/product-detail.html
+++ b/product-detail.html
@@ -26,7 +26,7 @@
             <li>
               <a href="/index.html">Home</a>
               <a href="/products.html">Products</a>
-              <a href="">About</a>
+              <a href="/product-detail.html">About</a>
               <a href="">Contact</a>
               <a href="">Account</a>
             </li>
