--- a/product-detail.html
+++ b/product-detail.html
@@ -24,15 +24,17 @@
         <nav>
           <ul id="MenuItems">
             <li>
-              <a href="/index.html">Home</a>
+              <a href="/home.html">Home</a>
               <a href="/products.html">Products</a>
-              <a href="/product-detail.html">About</a>
+              <a href="">About</a>
               <a href="">Contact</a>
               <a href="">Account</a>
             </li>
           </ul>
         </nav>
-        <img src="./Images/cart.png" width="25px" height="25px" />
+        <a href="./cart.html">
+          <img src="./Images/cart.png" width="25px" height="25px" />
+        </a>
         <img src="./Images/menu.png" class="menu-icon" onclick="menutoogle()" />
       </div>
     </div>
@@ -42,53 +44,52 @@
         <div class="col-2">
           <img src="./Images/gallery-1.jpg" width="100%" id="ProductImg" />
         </div>
-          <div class="small-img-row">
-            <div class="small-img-col">
-              <img src="Images/gallery-1.jpg" width="100%" class="SmallImg" />
-            </div>
-            <div class="small-img-col">
-              <img src="Images/gallery-2.jpg" width="100%" class="SmallImg" />
-            </div>
-            <div class="small-img-col">
-              <img src="Images/gallery-3.jpg" width="100%" class="SmallImg" />
-            </div>
-            <div class="small-img-col">
-              <img src="Images/gallery-4.jpg" width="100%" class="SmallImg" />
-            </div>
+        <div class="small-img-row">
+          <div class="small-img-col">
+            <img src="Images/gallery-1.jpg" width="100%" class="SmallImg" />
+          </div>
+          <div class="small-img-col">
+            <img src="Images/gallery-2.jpg" width="100%" class="SmallImg" />
+          </div>
+          <div class="small-img-col">
+            <img src="Images/gallery-3.jpg" width="100%" class="SmallImg" />
+          </div>
+          <div class="small-img-col">
+            <img src="Images/gallery-4.jpg" width="100%" class="SmallImg" />
           </div>
         </div>
-        <div class="col-2">
-          <p>Home / T-Shirt</p>
-          <h1>Red Printed T-Shirt by HRX</h1>
-          <h4>$50.00</h4>
-          <select>
-            <option>Select Size</option>
-            <option>XXL</option>
-            <option>XL</option>
-            <option>Large</option>
-            <option>Medium</option>
-            <option>Small</option>
-          </select>
-          <input type="number" value="1" />
-          <a href="" class="btn">Add to Cart</a>
-          <h3>Product Details <span class="fa fa-indent"></span></h3>
-          <br />
-          <p>
-            Give your summer wardrobe a style upgrade with HRX Men's Active
-            T-Shirt. Team it with a pair of shorts for your morning workout or a
-            denims for an evening out with the guys.
-          </p>
-        </div>
+      </div>
+      <div class="col-2">
+        <p>Home / T-Shirt</p>
+        <h1>Red Printed T-Shirt by HRX</h1>
+        <h4>$50.00</h4>
+        <select>
+          <option>Select Size</option>
+          <option>XXL</option>
+          <option>XL</option>
+          <option>Large</option>
+          <option>Medium</option>
+          <option>Small</option>
+        </select>
+        <input type="number" value="1" />
+        <a href="" class="btn">Add to Cart</a>
+        <h3>Product Details <span class="fa fa-indent"></span></h3>
+        <br />
+        <p>
+          Give your summer wardrobe a style upgrade with HRX Men's Active
+          T-Shirt. Team it with a pair of shorts for your morning workout or a
+          denims for an evening out with the guys.
+        </p>
       </div>
     </div>
     <!----- Title ----->
     <div class="small-container">
-        <div class="row">
-            <div class="row-2">
-                <h2>Related Products</h2>
-                <p>View More</p>
-            </div>
+      <div class="row">
+        <div class="row-2">
+          <h2>Related Products</h2>
+          <p>View More</p>
         </div>
+      </div>
     </div>
     <!----- Products ----->
     <div class="small-container">
