--- a/products.html
+++ b/products.html
@@ -24,15 +24,17 @@
         <nav>
           <ul id="MenuItems">
             <li>
-              <a href="/index.html">Home</a>
+              <a href="/home.html">Home</a>
               <a href="/products.html">Products</a>
-              <a href="/product-detail.html">About</a>
+              <a href="">About</a>
               <a href="">Contact</a>
               <a href="">Account</a>
             </li>
           </ul>
         </nav>
-        <img src="./Images/cart.png" width="25px" height="25px" />
+        <a href="./cart.html">
+          <img src="./Images/cart.png" width="25px" height="25px" />
+        </a>
         <img src="./Images/menu.png" class="menu-icon" onclick="menutoogle()" />
       </div>
     </div>
