--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <nav>
             <ul id="MenuItems">
               <li>
-                <a href="/home.html">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="/products.html">Products</a>
                 <a href="">About</a>
                 <a href="">Contact</a>
