--- a/product-detail.html
+++ b/product-detail.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="./menu-toogle.js"></script>
-    <title>Products - RedStore</title>
+    <title>Red Printed T-Shirt by HRX</title>
   </head>
   <body>
     <!----- header ----->
