--- a/products.html
+++ b/products.html
@@ -52,8 +52,12 @@
       </div>
       <div class="row">
         <div class="col-4">
-          <img src="./Images/product-1.jpg" />
-          <h4>Red Printed T-Shirt by HRX</h4>
+          <a href="./product-detail.html"
+            ><img src="./Images/product-1.jpg" />
+          </a>
+          <a href="./product-detail.html"
+            ><h4>Red Printed T-Shirt by HRX</h4></a
+          >
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
