Adding functionality to explore now button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               Success isn't always about greatness. It's about consistency.
               Consistent<br />hard work gains success. Greatness will come.
             </p>
-            <a href="" class="btn"> Explore Now &rarr;</a>
+            <a href="#featured-categories" class="btn"> Explore Now &rarr;</a>
           </div>
           <div class="col-2">
             <img src="./Images/image1.png" alt="soccer player" />
@@ -79,7 +79,8 @@
       <div class="row">
         <div class="col-4">
           <a href="./product-detail.html"
-            ><img src="./Images/product-1.jpg" /> </a>
+            ><img src="./Images/product-1.jpg" />
+          </a>
           <a href="./product-detail.html"
             ><h4>Red Printed T-Shirt by HRX</h4></a
           >
