--- a/account.html
+++ b/account.html
@@ -19,9 +19,7 @@
     <div class="container">
       <div class="navbar" id="Home">
         <div class="logo">
-          <a href="./index.html">
-            <img src="./Images/logo.png" alt="logo" width="125px" />
-          </a>
+        <a href="./index.html">  <img src="./Images/logo.png" alt="logo" width="125px" /> </a>
         </div>
         <nav>
           <ul id="MenuItems">
@@ -40,73 +38,35 @@
         <img src="./Images/menu.png" class="menu-icon" onclick="menutoogle()" />
       </div>
     </div>
-    <!----- cart item details ----->
-    <div class="small-container cart-page">
-      <table>
-        <tr>
-          <th>Products</th>
-          <th>Quantity</th>
-          <th>SubTotal</th>
-        </tr>
-        <tr>
-          <td>
-            <div class="cart-info">
-              <img src="./Images/buy-1.jpg" />
-              <div>
-                <p>Red Printed Shirt</p>
-                <small>Price: $50.00</small> <br />
-                <a href=""> Remove </a>
+    <!----- account page ----->
+    <div class="account-page">
+      <div class="container">
+        <div class="row">
+          <div class="col-2">
+            <img src="./Images/image1.png" width="100%" />
+          </div>
+          <div class="col-2">
+            <div class="form-container">
+              <div class="form-btn">
+                <span onclick="login()">Login</span>
+                <span onclick="register()">Register</span>
+                <hr id="Indicator" />
               </div>
+              <form id="LoginForm">
+                <input type="text" placeholder="Username" />
+                <input type="password" placeholder="Password" />
+                <button type="submit" class="btn">Login</button>
+                <a href="">Forget Password</a>
+              </form>
+              <form id="RegForm">
+                <input type="text" placeholder="Username" />
+                <input type="email" placeholder="Email" />
+                <input type="password" placeholder="Password" />
+                <button type="submit" class="btn">Register</button>
+              </form>
             </div>
-          </td>
-          <td><input type="number" value="1" /></td>
-          <td>$50.00</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="cart-info">
-              <img src="./Images/buy-2.jpg" />
-              <div>
-                <p>Black Sneakers</p>
-                <small>Price: $75.00</small> <br />
-                <a href=""> Remove </a>
-              </div>
-            </div>
-          </td>
-          <td><input type="number" value="1" /></td>
-          <td>$75.00</td>
-        </tr>
-        <tr>
-          <td>
-            <div class="cart-info">
-              <img src="./Images/buy-3.jpg" />
-              <div>
-                <p>Black Trouser</p>
-                <small>Price: $65.00</small> <br />
-                <a href=""> Remove </a>
-              </div>
-            </div>
-          </td>
-          <td><input type="number" value="1" /></td>
-          <td>$65.00</td>
-        </tr>
-      </table>
-
-      <div class="total-price">
-        <table>
-          <tr>
-            <td>SubTotal</td>
-            <td>$190.00</td>
-          </tr>
-          <tr>
-            <td>Tax</td>
-            <td>$35.00</td>
-          </tr>
-          <tr>
-            <td>Total</td>
-            <td>$225.00</td>
-          </tr>
-        </table>
+          </div>
+        </div>
       </div>
     </div>
     <!----- footer ----->
@@ -156,5 +116,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./JavaScript/smooth_scrolling.js"></script>
     <script src="./JavaScript/menu-toogle.js"></script>
+    <script src="./JavaScript/registration.js"></script>
   </body>
 </html>
