--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="navbar" id="Home">
           <div class="logo">
-            <img src="./Images/logo.png" alt="logo" width="125px" />
+            <a href="./index.html">  <img src="./Images/logo.png" alt="logo" width="125px" /> </a>
           </div>
           <nav>
             <ul id="MenuItems">
@@ -29,7 +29,7 @@
                 <a href="/products.html">Products</a>
                 <a href="">About</a>
                 <a href="">Contact</a>
-                <a href="">Account</a>
+                <a href="./account.html">Account</a>
               </li>
             </ul>
           </nav>
