--- a/product-detail.html
+++ b/product-detail.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="navbar" id="Home">
         <div class="logo">
-          <img src="./Images/logo.png" alt="logo" width="125px" />
+          <a href="./index.html">  <img src="./Images/logo.png" alt="logo" width="125px" /> </a>
         </div>
         <nav>
           <ul id="MenuItems">
@@ -28,7 +28,7 @@
               <a href="/products.html">Products</a>
               <a href="">About</a>
               <a href="">Contact</a>
-              <a href="">Account</a>
+              <a href="./account.html">Account</a>
             </li>
           </ul>
         </nav>
