--- a/product-detail.html
+++ b/product-detail.html
@@ -85,9 +85,11 @@
     <!----- Title ----->
     <div class="small-container">
       <div class="row">
-        <div class="row-2">
+        <div class="col-4 margin-bottom-none">
           <h2>Related Products</h2>
-          <p>View More</p>
+        </div>
+        <div class="col-4 aligin-end margin-bottom-none">
+          <a href="" class="view-more-a">View More</a>
         </div>
       </div>
     </div>
