--- a/cart.html
+++ b/cart.html
@@ -26,8 +26,8 @@
         <nav>
           <ul id="MenuItems">
             <li>
-              <a href="/index.html">Home</a>
-              <a href="/products.html">Products</a>
+              <a href="./index.html">Home</a>
+              <a href="./products.html">Products</a>
               <a href="">About</a>
               <a href="">Contact</a>
               <a href="./account.html">Account</a>
