--- a/product-detail.html
+++ b/product-detail.html
@@ -19,7 +19,9 @@
     <div class="container">
       <div class="navbar" id="Home">
         <div class="logo">
-          <a href="./index.html">  <img src="./Images/logo.png" alt="logo" width="125px" /> </a>
+          <a href="./index.html">
+            <img src="./Images/logo.png" alt="logo" width="125px" />
+          </a>
         </div>
         <nav>
           <ul id="MenuItems">
