Fix Footer and  images on product page

--- a/cart.html
+++ b/cart.html
@@ -28,8 +28,6 @@
             <li>
               <a href="./index.html">Home</a>
               <a href="./products.html">Products</a>
-              <a href="">About</a>
-              <a href="">Contact</a>
               <a href="./account.html">Account</a>
             </li>
           </ul>
@@ -123,13 +121,13 @@
           </div>
           <div class="footer-col-2">
             <img src="./Images/logo-white.png" />
-            <p>
+            <p class="footer-paragraph">
               Our purpose is to Sustainably Make the Pleasue and Benefits of
               Sports Accessible to the many.
             </p>
           </div>
           <div class="footer-col-3">
-            <h3>Useful Links</h3>
+            <h2 class="footer-h2">Useful Links</h2>
             <ul>
               <li>Coupons</li>
               <li>Blog Post</li>
@@ -138,12 +136,12 @@
             </ul>
           </div>
           <div class="footer-col-4 join-us">
-            <h3>Join Us</h3>
+            <h2 class="footer-h2">Join Us</h2>
             <ul>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">X(Twitter)</a></li>
-              <li><a href="">Discord</a></li>
+              <li><a href="" class="footer-a">Facebook</a></li>
+              <li><a href="" class="footer-a">Instagram</a></li>
+              <li><a href="" class="footer-a">X(Twitter)</a></li>
+              <li><a href="" class="footer-a">Discord</a></li>
             </ul>
           </div>
         </div>
