--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div class="container">
         <div class="navbar" id="Home">
           <div class="logo">
-            <a href="./index.html">  <img src="./Images/logo.png" alt="logo" width="125px" /> </a>
+            <a href="./index.html">
+              <img src="./Images/logo.png" alt="logo" width="125px" />
+            </a>
           </div>
           <nav>
             <ul id="MenuItems">
               <li>
                 <a href="./index.html">Home</a>
                 <a href="./products.html">Products</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
                 <a href="./account.html">Account</a>
               </li>
             </ul>
