--- a/product-detail.html
+++ b/product-detail.html
@@ -28,8 +28,6 @@
             <li>
               <a href="./index.html">Home</a>
               <a href="./products.html">Products</a>
-              <a href="">About</a>
-              <a href="">Contact</a>
               <a href="./account.html">Account</a>
             </li>
           </ul>
@@ -98,23 +96,9 @@
     <!----- Products ----->
     <div class="small-container">
       <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-9.jpg" />
-          <h4>Roadster Watch</h4>
-          <div class="rating">
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa-solid fa-star fa-star-half"></span>
-          </div>
-          <p>$50.00</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-10.jpg" />
-          <h4>Black & Red Joggers</h4>
+        <div class="col-3">
+          <img src="./Images/product-5.jpg" class="container-image" />
+          <h2>Skin Sneaker</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -124,11 +108,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-11.jpg" />
-          <h4>Roadster Silver Joggers</h4>
+        <div class="col-3">
+          <img src="./Images/product-6.jpg" class="container-image" />
+          <h2>Puma Black T-Shirt</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -138,11 +120,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-12.jpg" />
-          <h4>Black Slim Fit Trouser</h4>
+        <div class="col-3">
+          <img src="./Images/product-7.jpg" class="container-image" />
+          <h2>Pair of Socks</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -168,13 +148,13 @@
           </div>
           <div class="footer-col-2">
             <img src="./Images/logo-white.png" />
-            <p>
+            <p class="footer-paragraph">
               Our purpose is to Sustainably Make the Pleasue and Benefits of
               Sports Accessible to the many.
             </p>
           </div>
           <div class="footer-col-3">
-            <h3>Useful Links</h3>
+            <h2 class="footer-h2">Useful Links</h2>
             <ul>
               <li>Coupons</li>
               <li>Blog Post</li>
@@ -183,12 +163,12 @@
             </ul>
           </div>
           <div class="footer-col-4 join-us">
-            <h3>Join Us</h3>
+            <h2 class="footer-h2">Join Us</h2>
             <ul>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">X(Twitter)</a></li>
-              <li><a href="">Discord</a></li>
+              <li><a href="" class="footer-a">Facebook</a></li>
+              <li><a href="" class="footer-a">Instagram</a></li>
+              <li><a href="" class="footer-a">X(Twitter)</a></li>
+              <li><a href="" class="footer-a">Discord</a></li>
             </ul>
           </div>
         </div>
