--- a/products.html
+++ b/products.html
@@ -28,8 +28,6 @@
             <li>
               <a href="./index.html">Home</a>
               <a href="./products.html">Products</a>
-              <a href="">About</a>
-              <a href="">Contact</a>
               <a href="./account.html">Account</a>
             </li>
           </ul>
@@ -53,13 +51,9 @@
         </select>
       </div>
       <div class="row">
-        <div class="col-4">
-          <a href="./product-detail.html"
-            ><img src="./Images/product-1.jpg" />
-          </a>
-          <a href="./product-detail.html"
-            ><h4>Red Printed T-Shirt by HRX</h4></a
-          >
+        <div class="col-3">
+          <img src="./Images/product-1.jpg" class="container-image" />
+          <h2>Read PUMA Shirt</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -69,53 +63,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-2.jpg" />
-          <h4>Black Jogger</h4>
-          <div class="rating">
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-          </div>
-          <p>$50.00</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-3.jpg" />
-          <h4>Black trouser</h4>
-          <div class="rating">
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-          </div>
-          <p>$50.00</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-5.jpg" />
-          <h4>Skin Sneaker</h4>
-          <div class="rating">
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-          </div>
-          <p>$50.00</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-6.jpg" />
-          <h4>Puma Black T-Shirt</h4>
+        <div class="col-3">
+          <img src="./Images/product-2.jpg" class="container-image" />
+          <h2>Black Joggers</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -125,11 +75,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-7.jpg" />
-          <h4>Pair of Socks</h4>
+        <div class="col-3">
+          <img src="./Images/product-3.jpg" class="container-image" />
+          <h2>Grey Trouser</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -139,11 +87,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-7.jpg" />
-          <h4>HRX Pair of Socks</h4>
+        <div class="col-3">
+          <img src="./Images/product-4.jpg" class="container-image" />
+          <h2>Blue PUMA Shirt</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -153,11 +99,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-8.jpg" />
-          <h4>Fossil Black Watch</h4>
+        <div class="col-3">
+          <img src="./Images/product-5.jpg" class="container-image" />
+          <h2>Silver Sneakers</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -167,11 +111,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-9.jpg" />
-          <h4>Roadster Watch</h4>
+        <div class="col-3">
+          <img src="./Images/product-6.jpg" class="container-image" />
+          <h2>Black PUMA Round Neck</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -181,11 +123,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-10.jpg" />
-          <h4>Black & Red Joggers</h4>
+        <div class="col-3">
+          <img src="./Images/product-7.jpg" class="container-image" />
+          <h2>Pair of Sock by HRX</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -195,11 +135,9 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-11.jpg" />
-          <h4>Roadster Silver Joggers</h4>
+        <div class="col-3">
+          <img src="./Images/product-8.jpg" class="container-image" />
+          <h2>Fossil Black Watch</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -209,11 +147,45 @@
           </div>
           <p>$50.00</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-4">
-          <img src="./Images/product-12.jpg" />
-          <h4>Black Slim Fit Trouser</h4>
+        <div class="col-3">
+          <img src="./Images/product-9.jpg" class="container-image" />
+          <h2>RoadSter Black Watch</h2>
+          <div class="rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa-solid fa-star fa-star-half"></span>
+          </div>
+          <p>$50.00</p>
+        </div>
+        <div class="col-3">
+          <img src="./Images/product-10.jpg" class="container-image" />
+          <h2>Black & Red Joggers</h2>
+          <div class="rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa-solid fa-star fa-star-half"></span>
+          </div>
+          <p>$50.00</p>
+        </div>
+        <div class="col-3">
+          <img src="./Images/product-11.jpg" class="container-image" />
+          <h2>Grey Sneaker</h2>
+          <div class="rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa-solid fa-star fa-star-half"></span>
+          </div>
+          <p>$50.00</p>
+        </div>
+        <div class="col-3">
+          <img src="./Images/product-12.jpg" class="container-image" />
+          <h2>Black Slim Fit Trouser</h2>
           <div class="rating">
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -247,13 +219,13 @@
           </div>
           <div class="footer-col-2">
             <img src="./Images/logo-white.png" />
-            <p>
+            <p class="footer-paragraph">
               Our purpose is to Sustainably Make the Pleasue and Benefits of
               Sports Accessible to the many.
             </p>
           </div>
           <div class="footer-col-3">
-            <h3>Useful Links</h3>
+            <h2 class="footer-h2">Useful Links</h2>
             <ul>
               <li>Coupons</li>
               <li>Blog Post</li>
@@ -262,12 +234,12 @@
             </ul>
           </div>
           <div class="footer-col-4 join-us">
-            <h3>Join Us</h3>
+            <h2 class="footer-h2">Join Us</h2>
             <ul>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">X(Twitter)</a></li>
-              <li><a href="">Discord</a></li>
+              <li><a href="" class="footer-a">Facebook</a></li>
+              <li><a href="" class="footer-a">Instagram</a></li>
+              <li><a href="" class="footer-a">X(Twitter)</a></li>
+              <li><a href="" class="footer-a">Discord</a></li>
             </ul>
           </div>
         </div>
